# hook-game

./: Cargo.toml  README.md  Setup.md  build-wasm.sh  hook-game.wasm  index.html  rustfmt.toml
.github/workflows/: deploy.yml
assets/objects/: EXAMPLE_array_vec.json
src/: collision.rs  draw.rs  graphics.rs  input.rs  main.rs  model.rs  persistence.rs  state.rs  util.rs  z_deprecated_state.rs  z_deprecated_state_traits.rs
src/draw/: colors.rs  graphics.rs
src/draw/graphics/: hook_graphics.rs  item_graphics.rs  player_graphics.rs
src/state/: hook.rs  item.rs  player.rs  state_machine.rs
src/state/state_machine/: action.rs  hook.rs  item.rs  player.rs  player_backup.rs
