[package]
name = "hook-game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
derive_more = { version = "2.0.1", features = ["add", "mul"] }
either = "1.15.0"
enum_dispatch = "0.3.13"
getset = "0.1.6"
iter_num_tools = "0.7.1"
itertools = "0.14.0"
macroquad = "0.4.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
typed-builder = "0.23.0"
typenum = "1.19.0"
